Fix: Media carousel set to slideshow breaks on mobile when placed in a Container [ED-6796]

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -171,6 +171,12 @@
 		&-google_maps {
 			flex-basis: 100%;
 		}
+
+		// Fix media carousel widget broken (ED-6796).
+		// TODO: Find a better solution.
+		&-media-carousel {
+			max-width: 100%;
+		}
 	}
 
 	// Inner Container handle.
